# five_strips_of_bacon

./: README.md  bacon.py  decode_five_strips_of_bacon.py  five_strips_of_bacon.js  gui.py  index.html  main.py  pyproject.toml  styles.css
.github/workflows/: pylint.yml  python-publish.yml
src/: __main__.py  decode_five_strips_of_bacon.py  encode_five_strips_of_bacon.py  main.py
web_interface/: index.html
