[tool.poetry]
name = "five-strips-of-bacon"
version = "1.0.3"
description = "Encode/Decode messages using five simultaneous bacon ciphers."
authors = ["Odyhibit <josh.2990@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src/main.py"},
    { include = "src/encode_five_strips_of_bacon.py"},
    { include = "src/decode_five_strips_of_bacon.py"},
    { include = "src/bacon_five.png"},
    { include = "README.md"},
]



[tool.poetry.dependencies]
python = "^3.8"
customtkinter = "^5.2"
pillow = "^9"

[tool.poetry.scripts]
five-strips-of-bacon = "src.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
